// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa cBhtpl"
      type="NEWS"
    >
      <p>
        Default is set to news type
      </p>
      <button
        className="sc-bwzfXH ejpITE"
        onClick={[Function]}
      >
        X
      </button>
    </div>
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Alert
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Alert
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        Default is set to news type
                        "
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Alert
              " Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    type
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      NEWS
                      "
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    dismissable
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        true
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    onDismiss
                  </td>
                  <td>
                    func
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }
                      >
                        onDismiss()
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert dismissable with text 1`] = `
<div>
  <p>
    text
  </p>
</div>
`;

exports[`Storyshots Alert dismissable with text, type positive 1`] = `
<div>
  <p>
    text
  </p>
</div>
`;

exports[`Storyshots Alert empty 1`] = `<div />`;

exports[`Storyshots Alert empty dismissable 1`] = `<div />`;

exports[`Storyshots Alert non dismissable 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa cBhtpl"
      type="NEWS"
    >
      <p>
        I can't be dismissed!
      </p>
    </div>
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Alert
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            non dismissable
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Alert
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    dismissable
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          false
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        I can't be dismissed!
                        "
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Alert
              " Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    type
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      NEWS
                      "
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    dismissable
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        true
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    onDismiss
                  </td>
                  <td>
                    func
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }
                      >
                        onDismiss()
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert type attention 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa knDeIi"
      type="ATTENTION"
    >
      <p>
        Attention alert!
      </p>
      <button
        className="sc-bwzfXH ejpITE"
        onClick={[Function]}
      >
        X
      </button>
    </div>
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Alert
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            type attention
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Alert
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    type
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        ATTENTION
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        Attention alert!
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    onDismiss
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          dismiss_triggered()
                        </span>
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Alert
              " Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    type
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      NEWS
                      "
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    dismissable
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        true
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    onDismiss
                  </td>
                  <td>
                    func
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }
                      >
                        onDismiss()
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert type negative 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa bwQTCQ"
      type="NEGATIVE"
    >
      <p>
        Negative alert!
      </p>
      <button
        className="sc-bwzfXH ejpITE"
        onClick={[Function]}
      >
        X
      </button>
    </div>
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Alert
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            type negative
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Alert
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    type
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        NEGATIVE
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        Negative alert!
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    onDismiss
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          dismiss_triggered()
                        </span>
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Alert
              " Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    type
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      NEWS
                      "
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    dismissable
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        true
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    onDismiss
                  </td>
                  <td>
                    func
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }
                      >
                        onDismiss()
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert type news 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa cBhtpl"
      type="NEWS"
    >
      <p>
        New alert!
      </p>
      <button
        className="sc-bwzfXH ejpITE"
        onClick={[Function]}
      >
        X
      </button>
    </div>
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Alert
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            type news
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Alert
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        New alert!
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    onDismiss
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          dismiss_triggered()
                        </span>
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Alert
              " Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    type
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      NEWS
                      "
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    dismissable
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        true
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    onDismiss
                  </td>
                  <td>
                    func
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }
                      >
                        onDismiss()
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert type positive 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa kNhmFq"
      type="POSITIVE"
    >
      <p>
        Positive alert!
      </p>
      <button
        className="sc-bwzfXH ejpITE"
        onClick={[Function]}
      >
        X
      </button>
    </div>
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Alert
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            type positive
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Alert
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    type
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        POSITIVE
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        Positive alert!
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    onDismiss
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          dismiss_triggered()
                        </span>
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Alert
              " Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    type
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      NEWS
                      "
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    dismissable
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        true
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    onDismiss
                  </td>
                  <td>
                    func
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    <span>
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }
                      >
                        onDismiss()
                      </span>
                    </span>
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
